--- a/ecom_backend/src/main/resources/application.properties
+++ b/ecom_backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ecom_backend
+
+#database url
+spring.datasource.url=jdbc:h2:mem:suraj
+
+#database driver
+spring.datasource.driverClassName=org.h2.Driver
+
+#show my queries behind the scene
+spring.jpa.show-sql=true
+
+#do not create new table every time just update
+spring.jpa.hibernate.ddl-auto=update
+
