creating dummy data before run with delay(making confi in app..)

--- a/ecom_backend/src/main/resources/application.properties
+++ b/ecom_backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=true
 #do not create new table every time just update
 spring.jpa.hibernate.ddl-auto=update
 
+#create dummy data after creating table with delay
+spring.jpa.defer-datasource-initialization=true;
