--- a/ecom_backend/src/main/resources/application.properties
+++ b/ecom_backend/src/main/resources/application.properties
@@ -1,42 +1,24 @@
-#spring.application.name=ecom_backend
-#
+spring.application.name=ecom_backend
+
+#FRONTEND URL
+frontend.url=${FRONTEND_URL}
+
 ##database url
-#spring.datasource.url=jdbc:h2:mem:suraj
-#
-##database driver
-#spring.datasource.driverClassName=org.h2.Driver
-#
+spring.datasource.url=${DATASOURCE_URL}
+
+##username
+spring.datasource.username=${DATASOURCE_USER}
+
+##password
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
 ##show my queries behind the scene
 #spring.jpa.show-sql=true
-#
-##do not create new table every time just update
-#spring.jpa.hibernate.ddl-auto=update
-#
-##create dummy data after creating table with delay
-#spring.jpa.defer-datasource-initialization=true;
-
-
-
-
-#mysql
-
-##database url
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/ecom
-
-##username password
-spring.datasource.username=root
-spring.datasource.password=rowdy19
-
-##show my queries behind the scene
-spring.jpa.show-sql=true
 
 ##do not create new table every time just update
 spring.jpa.hibernate.ddl-auto=update
 
-#
 spring.jpa.generate-ddl=true
-
-#
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
